issue #390: publish TPS exceed 1200/s (#394)